K8s/clutch-employee/Clutch-Employee-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clutch-employee-deployment
  labels:
        app: clutch-employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clutch-employee
  template:
    metadata:
      labels:
        app: clutch-employee
    spec:
      containers:
        - name: clutch-employee
          image: dragg54/clutch-employee:tagname
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: clutch-employee-clusterip-srv
spec:
  selector:
    app: clutch-employee
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
