K8s/clutch-employee/Clutch-Employee-MYSQL-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clutch-emp-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: clutch-emp-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: clutch-emp-mysql-clusterip
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: clutch-emp-mysql-loadbalancer
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort
