K8s/clutch-employee/Clutch-Employee-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clutch-employee-np-srv
spec:
  selector:
    app: clutch-employee
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
