K8s/clutch-employee/Clutch-Employee-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clutch-emp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: clutch-employee.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: clutch-employee-clusterip-srv
              port:
                number: 80
